--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-
-server.port=8091
+logging.level.org.springframework=info
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bankportal
 spring.datasource.username=root
-spring.datasource.password=ishant
+spring.datasource.password=lovedeep
 spring.jpa.hibernate.ddl-auto=update
