Added LoanReqController.java, updated TransactionsController.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
-<<<<<<< HEAD
-logging.level.org.springframework=debug
-server.port=8099
-=======
+#logging.level.org.springframework=debug
 
 server.port=8091
-logging.level.org.springframework=info
 
->>>>>>> 492a17beefa5eba56e6c204d40d14fac83c124c8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bankportal
 spring.datasource.username=root
-spring.datasource.password=alchemy@4193
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
