--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bankportal
 spring.datasource.username=root
-spring.datasource.password=lovedeep
+spring.datasource.password=alchemy@4193
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework=debug
+
+server.port=8090
