--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bankportal
 spring.datasource.username=root
 spring.datasource.password=ishant
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
