--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.username=root
 spring.datasource.password=lovedeep
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework=debug
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lovedeepgahlyan1999@gmail.com
+spring.mail.password=vwdwuhpdtmdegvqj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
