--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ logging.level.org.springframework=debug
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=lovedeepgahlyan1999@gmail.com
-spring.mail.password=vwdwuhpdtmdegvqj
+spring.mail.username=abhihappiest10@gmail.com
+spring.mail.password=prtubqfwgpoolmzh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
