--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ server.port=8091
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bankportal
 spring.datasource.username=root
-spring.datasource.password=alchemy@4193
+spring.datasource.password=ishant
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hmbankofficial@gmail.com
-spring.mail.password=rlmkaatrdxavjfkf
+spring.mail.password=akgfiwoudgyjtnvt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
