--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8091
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bankportal
 spring.datasource.username=root
-spring.datasource.password=ishant
+spring.datasource.password=alchemy@4193
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework=info
+logging.level.org.springframework=debug
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port=587
